@@ -14,6 +14,12 @@ export QT_SELECT := qt5
 override_dh_auto_configure:
 	qmake
 
+override_dh_auto_build-indep:
+	dh_auto_build -Smakefile -- docs
+
+override_dh_auto_install-indep:
+	make INSTALL_ROOT=$(CURDIR)/debian/tmp install_docs
+
 override_dh_install:
 	dh_install --fail-missing
 
