@@ -8,6 +8,7 @@ qtgraphicaleffects-opensource-src (5.0.2-2) UNRELEASED; urgency=low
     - Add the necessary indep build dependencies:
       * qttools5-dev-tools to use qhelpgenerator.
       * libqt5sql5-sqlite to generate qch doc
+    - Build and create packages for qch and HTML doc formats.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 28 Apr 2013 16:34:58 +0200
 
